[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/gui/2d/tools_menu.gd" type="Script" id=1]
[ext_resource path="res://game/gui/2d/girassol_font.tres" type="DynamicFont" id=2]

[node name="ToolsMenu" type="GridContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 178.0
margin_bottom = 147.0
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Build" type="MenuButton" parent="."]
margin_right = 86.0
margin_bottom = 45.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "Build"
flat = false
items = [ "Wall", null, 0, false, false, 0, 0, null, "", false, "Door", null, 0, false, false, 1, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chop" type="Button" parent="."]
margin_left = 90.0
margin_right = 176.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Chop"

[node name="Sow" type="Button" parent="."]
margin_top = 49.0
margin_right = 86.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 2 )
text = "Sow"

[node name="Reap" type="Button" parent="."]
margin_left = 90.0
margin_top = 49.0
margin_right = 176.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 2 )
text = "Reap"

[node name="Mine" type="Button" parent="."]
margin_top = 98.0
margin_right = 86.0
margin_bottom = 143.0
custom_fonts/font = ExtResource( 2 )
text = "Mine"

[node name="Forge" type="Button" parent="."]
margin_left = 90.0
margin_top = 98.0
margin_right = 176.0
margin_bottom = 143.0
custom_fonts/font = ExtResource( 2 )
text = "Forge"

[node name="Forage" type="Button" parent="."]
margin_top = 147.0
margin_right = 86.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 2 )
text = "Forge"

[connection signal="pressed" from="Chop" to="." method="chop_pressed"]
[connection signal="pressed" from="Sow" to="." method="sow_pressed"]
[connection signal="pressed" from="Reap" to="." method="reap_pressed"]
[connection signal="pressed" from="Mine" to="." method="mine_pressed"]
[connection signal="pressed" from="Forge" to="." method="forge_pressed"]
[connection signal="pressed" from="Forage" to="." method="forage_pressed"]
